exports[`Container > Organization Delete Analysis 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organization/organization-2",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > Organization Delete Commuter Group 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organization/organization-2",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > Organization Delete Organization 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/agency/agency-3",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > Organization Delete Site 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organization/organization-2",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > Organization Organization View loads 1`] = `
"<div class=\"container\">
  <div class=\"row\">
    <div class=\"col-xs-12\">
      <h2>
        <i class=\"fa fa-shield fa-fw \"></i>

        <!-- react-text: 6 -->Mock Organization<!-- /react-text -->
      </h2>
      <div class=\"btn-group\">
        <button type=\"button\" class=\"btn btn-warning\">
          <a>Edit</a> 
        </button>
        <button type=\"button\" class=\"btn btn-danger\">Delete</button>
      </div>
      <p>Below are this organization\'s sites, commuter groups and analyses.</p>
      <h3>

        <!-- react-text: 13 -->Sites<!-- /react-text -->
        <button type=\"button\" class=\"pull-right btn btn-default\">
          <a>

            <!-- react-text: 16 -->Create a new site<!-- /react-text -->
            <i class=\"fa fa-building fa-fw \"></i>
          </a> 
        </button>
      </h3>
      <p>A site is a location of a building or new address that you want to use as the centerpoint of your commutes.</p>
      <div class=\"react-bs-table-container\">
        <div class=\"react-bs-table\" style=\"height: 100%;\">
          <div class=\"react-bs-container-header table-header-wrapper\">
            <table class=\"table table-hover table-bordered\">
              <thead>
                <tr>
                  <th class=\"\" style=\"text-align: left; display: none; min-width: NaNpx;\" data-field=\"_id\">
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Name\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 28 -->Name<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Address\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"address\">

                    <!-- react-text: 31 -->Address<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Tools\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 34 -->Tools<!-- /react-text -->
                    <div></div>
                  </th>
                </tr>
              </thead>
            </table>
          </div>
          <div class=\"react-bs-container-body\" style=\"height: 100%;\">
            <table class=\"table table-bordered\">
              <colgroup>
                <col class=\"\" style=\"display: none;\">
                  <col class=\"\">
                    <col class=\"\">
                      <col class=\"\">
              </colgroup>
              <tbody>
                <tr class=\"\">
                  <td class=\"\" style=\"text-align: left; display: none;\">site-2</td>
                  <td class=\"\" style=\"text-align: left;\">
                    <a>Acme Corp</a> 
                  </td>
                  <td class=\"\" style=\"text-align: left;\">123 ABC St</td>
                  <td class=\"\" style=\"text-align: left;\">
                    <div>
                      <button type=\"button\" class=\"btn btn-warning\">
                        <a>Edit</a> 
                      </button>
                      <button type=\"button\" class=\"btn btn-danger\">Delete</button>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <h3>

        <!-- react-text: 55 -->Commuter Groups<!-- /react-text -->
        <button type=\"button\" class=\"pull-right btn btn-default\">
          <a>

            <!-- react-text: 58 -->Create a new group<!-- /react-text -->
            <i class=\"fa fa-users fa-fw \"></i>
          </a> 
        </button>
      </h3>
      <p>A commuter group is a list of commuters that can commute to a particular site.</p>
      <div class=\"react-bs-table-container\">
        <div class=\"react-bs-table\" style=\"height: 100%;\">
          <div class=\"react-bs-container-header table-header-wrapper\">
            <table class=\"table table-hover table-bordered\">
              <thead>
                <tr>
                  <th class=\"\" style=\"text-align: left; display: none; min-width: NaNpx;\" data-field=\"_id\">
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Name\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 70 -->Name<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Commuters\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"commuters\">

                    <!-- react-text: 73 -->Commuters<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Tools\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 76 -->Tools<!-- /react-text -->
                    <div></div>
                  </th>
                </tr>
              </thead>
            </table>
          </div>
          <div class=\"react-bs-container-body\" style=\"height: 100%;\">
            <table class=\"table table-bordered\">
              <colgroup>
                <col class=\"\" style=\"display: none;\">
                  <col class=\"\">
                    <col class=\"\">
                      <col class=\"\">
              </colgroup>
              <tbody>
                <tr class=\"\">
                  <td class=\"\" style=\"text-align: left; display: none;\">group-2</td>
                  <td class=\"\" style=\"text-align: left;\">
                    <a>Mock Group</a> 
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <div>1</div>
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <button type=\"button\" class=\"btn btn-danger\">Delete</button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <h3>

        <!-- react-text: 95 -->Analyses<!-- /react-text -->
        <button type=\"button\" class=\"pull-right btn btn-default\">
          <a>

            <!-- react-text: 98 -->Create a new analysis<!-- /react-text -->
            <i class=\"fa fa-bar-chart fa-fw \"></i>
          </a> 
        </button>
      </h3>
      <p>An analysis calculates commuting statistics for a pairing of a commuter group and site.</p>
      <div class=\"react-bs-table-container\">
        <div class=\"react-bs-table\" style=\"height: 100%;\">
          <div class=\"react-bs-container-header table-header-wrapper\">
            <table class=\"table table-hover table-bordered\">
              <thead>
                <tr>
                  <th class=\"\" style=\"text-align: left; display: none; min-width: NaNpx;\" data-field=\"_id\">
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Name\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 110 -->Name<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Site\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 113 -->Site<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Group\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 116 -->Group<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Tools\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 119 -->Tools<!-- /react-text -->
                    <div></div>
                  </th>
                </tr>
              </thead>
            </table>
          </div>
          <div class=\"react-bs-container-body\" style=\"height: 100%;\">
            <table class=\"table table-bordered\">
              <colgroup>
                <col class=\"\" style=\"display: none;\">
                  <col class=\"\">
                    <col class=\"\">
                      <col class=\"\">
                        <col class=\"\">
              </colgroup>
              <tbody>
                <tr class=\"\">
                  <td class=\"\" style=\"text-align: left; display: none;\">analysis-2</td>
                  <td class=\"\" style=\"text-align: left;\">
                    <a>An Analysis</a> 
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <a>Acme Corp</a> 
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <a>Mock Group</a> 
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <button type=\"button\" class=\"btn btn-danger\">Delete</button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
